apps/dev/ingress/gke-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: external-https
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 80
    tls:
      mode: Terminate
      certificateRefs:
        - name: prow-tls
          namesppace: apps
  addresses:
  - type: NamedAddress
    value: ${INGRESS_STATIC_IP_NAME}
